--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header><h1>Harry Potter</h1></header>
+	<nav>
+		<ul>
+			<li><a href="#actor" id="nav-actor">Actors</a></li>
+			<li><a href="#quote" id="nav-quote">Quotes</a></li>
+		</ul>
+	</nav>
+		<p><h2>The <i>Harry Potter</i> written by J.K. Rowling, follows the journey of a young wizard, Harry Potter, as he discovers his magical heritage and his destiny to defeat the dark wizard Lord Voldemort.</h2></p>
+	<section id="actor">
+		<ul>
+			<li>Daniel Radcliffe</li>
+			<li>Rupert Grint</li>
+			<li>Emma Watson</li>
+		</ul>
+	</section>
+	<section id="quote">
+		<ul>
+			<li>It takes a great deal of bravery to stand up to our enemies, but just as much to stand up to our friends</li>
+			<li>It is our choices, Harry, that show what we truly are, far more than our abilities</li>
+			<li>I am what I am an’ I’m not ashamed</li>
+		</ul>
+	</section>
+	<aside>
+		<div><b>Harry Potter and the Sorcerer's Stone:</b> Released in 2001, this movie has a rating of 7.6/10 on IMDb.</div>
+		<div><b>Harry Potter and the Chamber of Secrets:</b> Released in 2002, this movie has a rating of 7.4/10 on IMDb.</div>
+		<div><b>Harry Potter and the Prisoner of Azkaban:</b> Released in 2004, this movie has a rating of 7.9/10 on IMDb.</div>
+	</aside>
+		<footer><p>
+			<b>Produced by: </b>David Heyman
+		</p></footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
