--- a/main.html
+++ b/main.html
@@ -17,18 +17,10 @@
 	</nav>
 		<p><h2>The <i>Harry Potter</i> written by J.K. Rowling, follows the journey of a young wizard, Harry Potter, as he discovers his magical heritage and his destiny to defeat the dark wizard Lord Voldemort.</h2></p>
 	<section id="actor">
-		<ul>
-			<li>Daniel Radcliffe</li>
-			<li>Rupert Grint</li>
-			<li>Emma Watson</li>
-		</ul>
+		The main actor who plays Harry Potter in the film series is Daniel Radcliffe. He portrayed the character throughout all eight movies based on J.K. Rowling's book series. Emma Watson is an English actress and activist best known for her role as Hermione Granger in the Harry Potter film series. Rupert Alexander Lloyd Grint (/ɡrɪnt/; born 24 August 1988) is an English actor. He rose to fame for his role as Ron Weasley in the Harry Potter film series, for which he was cast at age eleven, having previously acted only in school plays and his local theatre group.
 	</section>
 	<section id="quote">
-		<ul>
-			<li>It takes a great deal of bravery to stand up to our enemies, but just as much to stand up to our friends</li>
-			<li>It is our choices, Harry, that show what we truly are, far more than our abilities</li>
-			<li>I am what I am an’ I’m not ashamed</li>
-		</ul>
+		It takes a great deal of bravery to stand up to our enemies, but just as much to stand up to our friends. It is our choices, Harry, that show what we truly are, far more than our abilities. I am what I am an’ I’m not ashamed.
 	</section>
 	<aside>
 		<div><b>Harry Potter and the Sorcerer's Stone:</b> Released in 2001, this movie has a rating of 7.6/10 on IMDb.</div>
@@ -36,7 +28,7 @@
 		<div><b>Harry Potter and the Prisoner of Azkaban:</b> Released in 2004, this movie has a rating of 7.9/10 on IMDb.</div>
 	</aside>
 		<footer><p>
-			<b>Produced by: </b>David Heyman
+			Produced by: David Heyman
 		</p></footer>
     <script type="text/javascript" src="./script.js">
 </script>
