--- a/main.html
+++ b/main.html
@@ -15,7 +15,9 @@
 			<li><a href="#quote" id="nav-quote">Quotes</a></li>
 		</ul>
 	</nav>
+	<summary>
 		<p><h2>The <i>Harry Potter</i> written by J.K. Rowling, follows the journey of a young wizard, Harry Potter, as he discovers his magical heritage and his destiny to defeat the dark wizard Lord Voldemort.</h2></p>
+	</summary>
 	<section id="actor">
 		The main actor who plays Harry Potter in the film series is Daniel Radcliffe. He portrayed the character throughout all eight movies based on J.K. Rowling's book series. Emma Watson is an English actress and activist best known for her role as Hermione Granger in the Harry Potter film series. Rupert Alexander Lloyd Grint (/ɡrɪnt/; born 24 August 1988) is an English actor. He rose to fame for his role as Ron Weasley in the Harry Potter film series, for which he was cast at age eleven, having previously acted only in school plays and his local theatre group.
 	</section>
