--- a/main.html
+++ b/main.html
@@ -10,10 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<header><h1>Harry Potter</h1></header>
 	<nav>
-		<ul>
-			<li><a href="#actor" id="nav-actor">Actors</a></li>
-			<li><a href="#quote" id="nav-quote">Quotes</a></li>
-		</ul>
+			<a href="#actor" id="nav-actor">Actors</a></li>
+			<a href="#quote" id="nav-quote">Quotes</a></li>
 	</nav>
 	<summary>
 		<p><h2>The <i>Harry Potter</i> written by J.K. Rowling, follows the journey of a young wizard, Harry Potter, as he discovers his magical heritage and his destiny to defeat the dark wizard Lord Voldemort.</h2></p>
